# pinball

./: pyproject.toml
pinball/: constants.py  main.py  main_Bob.py
pinball/objects/: ball.py  const.py  court.py  flipper.py  line.py  obstacle.py  point.py  spring.py  utils.py  vector.py
tests/: test_calcualte_distance.py  test_calculate_distance.py  test_calculate_intersection.py  test_calculate_point_line_distance.py  test_calculate_vector_angle.py  test_lines_parallel.py  test_point_on_line.py  test_vector.py
